@@ -1,7 +1,7 @@
 public class TestEquals {
     public static void main(String[] args) {
-        Integer m = new Integer(3);
-        Integer n = new Integer(3);
+        Integer m = Integer.valueOf(3);
+        Integer n = Integer.valueOf(3);
         System.out.println("m==n: " + (m == n));
         System.out.println("m.equals(n): " + m.equals(n));
     }
